[package]
name = "rust_iron_rest"
version = "0.1.0"
authors = ["Илья Ефимов <inferrna@gmail.com>"]
edition = "2018"

[dependencies]
iron = "*"
router = "*"
base64 = "*"
image = "*"
reqwest = "*"
md5 = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"

[dependencies.cvtry]
git = "https://github.com/inferrna/rs_cv_resize.git"

[features]
cvresize = []
