[package]
name = "rust_iron_rest"
version = "0.1.0"
authors = ["Илья Ефимов <inferrna@gmail.com>"]
edition = "2018"

[dependencies]
iron = "0.6.*"
router = "*"
serde = "*"
serde_json = "*"
base64 = "*"
image = "*"
reqwest = "*"
http = "0.1"
md5 = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"


